--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Georgia', serif;
-    background-color: #0A0908;
+    background-color: #0a0908;
     color: #F2F4F3;
     margin: 0;
     padding: 0;
@@ -57,6 +57,9 @@ body {
 
     .menu-icon {
         display: block;
+    }
+    .container{
+        justify-content: center;
     }
 }
 
