--- a/style.css
+++ b/style.css
@@ -37,7 +37,10 @@ body {
 .nav-links li a:hover {
     color: #A9927D;
 }
-
+.classy{
+    height: 01px;
+    background-color: #A9927D;
+}
 /* Responsive Styling */
 @media (max-width: 768px) {
     .nav-links {
@@ -72,7 +75,7 @@ main {
 }
 .container {
     text-align: center;
-    margin-top: 15%;
+    margin-top: 14.7%;
 }
 .upper{
     font-size: 2.4rem;
