--- a/style3.css
+++ b/style3.css
@@ -78,6 +78,7 @@ body {
     border-radius: 8px;
     background:  #22333B;
     padding: 2rem;
+    border: 1px solid #A9927D;
 }
 
 .contact-container h2 {
