--- a/style1.css
+++ b/style1.css
@@ -121,6 +121,7 @@ main {
     color: #F2F4F3;
     z-index: 1000;
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
+    border: 1px solid #A9927D;
 }
 
 .modal-content {
